[tool.poetry]
name = "async-typer"
version = "0.1.8"
description = "A simple async wrapper for typer"
authors = ["byunjuneseok <byunjuneseok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "<1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
